[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scenes/ennemy_2.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b28hsn2n88rx5" path="res://plantsennemies/treeant/$Tree Ent.png" id="2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_khha1"]
atlas = ExtResource("2")
region = Rect2(0, 0, 80, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o231"]
atlas = ExtResource("2")
region = Rect2(80, 0, 80, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_52vge"]
atlas = ExtResource("2")
region = Rect2(160, 0, 80, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5bnrq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khha1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o231")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52vge")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nlx86"]
radius = 171.7460021972656

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_46fb3"]
radius = 14.0
height = 68.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c00ne"]
radius = 45.27690124511719

[node name="ennemy2" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(203, -131)
scale = Vector2(1.4375, 0.7578129768371582)
sprite_frames = SubResource("SpriteFrames_5bnrq")
animation = &"idle"
autoplay = "idle"

[node name="detectionarea" type="Area2D" parent="."]
position = Vector2(201.9799957275391, -131.5919952392578)
scale = Vector2(0.6600000262260437, 0.6651380062103271)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionarea"]
texture_filter = 1
position = Vector2(0.03031920082867146, 0.8900300264358521)
shape = SubResource("CircleShape2D_nlx86")

[node name="ennemycol" type="CollisionShape2D" parent="."]
position = Vector2(201, -132)
shape = SubResource("CapsuleShape2D_46fb3")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="hitcol" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(202, -131)
shape = SubResource("CircleShape2D_c00ne")

[node name="damage_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="detectionarea" to="." method="_on_detectionarea_body_entered"]
[connection signal="body_exited" from="detectionarea" to="." method="_on_detectionarea_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
